--- a/src/app/dashboard/card/card.component.html
+++ b/src/app/dashboard/card/card.component.html
@@ -2,14 +2,32 @@
   <mat-card-header>
     <mat-card-title>{{card.name}}</mat-card-title>
   </mat-card-header>
-  <img mat-card-image [src]="card.pic" alt="Photo of a Shiba Inu">
+  <div style="width: 100%;">
+    <img class="imagem-card" [src]="card.pic">
+    <!-- <img class="imagem-card" src="/assets/images/01.jpg"> -->
+  </div>
   <mat-card-content>
-    <p>
+    <p style="font-size: 15px;">
       {{card.description}}
     </p>
   </mat-card-content>
-  <mat-card-actions>
-    <button mat-button>LIKE {{card.likes}}</button>
-    <button mat-button>SHARE</button>
-  </mat-card-actions>
+  <div class="content-buttons">
+    <ng-container *ngIf="card.likes>=1 && card.likes < 5">
+      <button mat-raised-button class="like-button"  (click)="onLike(card)">LIKE {{card.likes}}</button>
+    </ng-container>
+    <ng-container *ngIf="card.likes>=5 && card.likes < 10">
+      <button mat-raised-button class="like-button color-blue"  (click)="onLike(card)">LIKE {{card.likes}}</button>
+    </ng-container>
+    <ng-container *ngIf="card.likes>=10">
+      <button mat-raised-button class="like-button color-purple"  (click)="onLike(card)">LIKE {{card.likes}}</button>
+    </ng-container>
+    <a mat-raised-button class="share-button" target="_blank"
+    href="https://www.linkedin.com/in/d%C3%A1lan-marinho-b23a37239?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BqvsNm%2B23QoGkcCsg4w3Dqw%3D%3D">
+    SHARE</a>
+  </div>
+    <!-- <mat-card-actions>
+      <button mat-raised-button class="like-button">LIKE {{card.likes}}</button>
+      <button mat-button>SHARE</button>
+    </mat-card-actions> -->
+    
 </mat-card>
