--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,15 @@
 /* Add application styles & imports to this file! */
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
+@import url("https://fonts.googleapis.com/css?family=Oswald");
+* {
+    font-family: "Oswald", sans-serif;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+  }
+
+html, body, header{
+    top: 0;
+    margin: 0!important;
+    scroll-behavior: smooth;
+}
